v1/api-reference/endpoints/extract/cancel-extract-execution.mdx
---
title: "Cancel Extract Execution"
api: "DELETE https://api.getcatalog.ai/v1/extract/{execution_id}"
description: "Cancel a running extraction execution"
---

Cancel a running extraction execution. This endpoint stops an active extraction job that is currently processing.

<Tip>
**When to use:** Use this endpoint when you need to stop an extraction job that is currently running. This is useful if:
- You started an extraction job by mistake
- The extraction is taking longer than expected and you want to stop it
- You need to free up resources for other operations
</Tip>

<Note>
**Cancellation Requirements:** You can only cancel executions that are currently running. If an execution has already completed or failed, it cannot be canceled. Executions that are waiting for a crawl to complete (status "pending" with `waiting_for`) cannot be canceled until they start running. The endpoint will return an error if you attempt to cancel a non-running execution.
</Note>

## Request

<ParamField header="x-api-key" type="string" required>
  Your API key for authentication
</ParamField>

<ParamField path="execution_id" type="string" required>
  The execution ID of the extraction job to cancel
  
  **Format:** `extract-{vendor}-{uuid}`
  
  **Note:** If the execution ID does not exist, the endpoint returns a 404 Not Found error.
</ParamField>

### Query Parameters

<ParamField query="arn" type="string" optional>
  Full AWS Step Functions execution ARN (optional override, used for advanced scenarios)
</ParamField>

## Response

<ResponseField name="status" type="string">
  Status after cancellation. Always `"canceled"` on success.
</ResponseField>

<ResponseField name="execution_id" type="string">
  The execution identifier that was canceled
</ResponseField>

<ResponseField name="stop_date" type="string | null">
  ISO 8601 timestamp when the execution was stopped (null if not available)
</ResponseField>

<RequestExample>

```bash cURL
curl -X DELETE "https://api.getcatalog.ai/v1/extract/extract-nike-com-550e8400" \
  -H "x-api-key: $CATALOG_API_KEY"
```

```javascript JavaScript
// Cancel execution
const executionId = 'extract-nike-com-550e8400';

const response = await fetch(
  `https://api.getcatalog.ai/v1/extract/${executionId}`,
  {
    method: 'DELETE',
    headers: {
      'x-api-key': 'YOUR_API_KEY'
    }
  }
);

const data = await response.json();
console.log(`Execution ${data.execution_id} canceled at ${data.stop_date}`);
```

```python Python
import requests

execution_id = 'extract-nike-com-550e8400'

# Cancel execution
response = requests.delete(
    f'https://api.getcatalog.ai/v1/extract/{execution_id}',
    headers={'x-api-key': 'YOUR_API_KEY'}
)

data = response.json()
print(f"Execution {data['execution_id']} canceled at {data['stop_date']}")
```

</RequestExample>

<ResponseExample>

```json DELETE Response
{
  "status": "canceled",
  "execution_id": "extract-nike-com-550e8400",
  "stop_date": "2025-01-15T10:35:22.000Z"
}
```

</ResponseExample>
